Introducing gpu::CommandBufferId as a distinct, IdType<...>-based type.
This CL generalizes the pattern used by content::SavePackageId and
cc::SurfaceId and puts it into //base/id_type.h.  Using this pattern for
gpu::CommandBufferId should hopefully help avoid bugs like the mixup
fixed by https://crrev.com/365437.

BUG=514815, 565545
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel
TBR=wolenetz@chromium.org, sky@chromium.org

Review URL: https://codereview.chromium.org/1548443002

Cr-Commit-Position: refs/heads/master@{#375620}

--- a/gpu/command_buffer/common/BUILD.gn
+++ b/gpu/command_buffer/common/BUILD.gn
@@ -32,6 +32,7 @@ source_set("common_sources") {
     "cmd_buffer_common.cc",
     "cmd_buffer_common.h",
     "command_buffer.h",
+    "command_buffer_id.h",
     "constants.h",
     "debug_marker_manager.cc",
     "debug_marker_manager.h",
@@ -42,10 +43,12 @@ source_set("common_sources") {
     "gles2_cmd_ids_autogen.h",
     "id_allocator.cc",
     "id_allocator.h",
+    "id_type.h",
     "mailbox.cc",
     "mailbox.h",
     "mailbox_holder.cc",
     "mailbox_holder.h",
+    "sync_token.cc",
     "sync_token.h",
     "thread_local.h",
     "time.h",
