--- a/BUILD.gn
+++ b/BUILD.gn
@@ -236,7 +236,14 @@ group("both_gn_and_gyp") {
   }
 
   if (use_aura) {
-    deps += [ "//ui/wm:wm_unittests" ]
+    deps += [
+      "//ash:ash_shell_with_content",
+      "//ash:ash_unittests",
+      "//ui/aura:aura_unittests",
+      "//ui/aura:bench",
+      "//ui/aura:demo",
+      "//ui/wm:wm_unittests",
+    ]
   }
 
   if (use_ozone) {
@@ -463,16 +470,6 @@ group("both_gn_and_gyp") {
 
     if (media_use_ffmpeg && !is_android) {
       deps += [ "//media:ffmpeg_regression_tests" ]
-    }
-
-    if (use_aura) {
-      deps += [
-        "//ash:ash_shell_with_content",
-        "//ash:ash_unittests",
-        "//ui/aura:aura_unittests",
-        "//ui/aura:bench",
-        "//ui/aura:demo",
-      ]
     }
   }
 
