Teach ApplicationManager how to use the remote package manager.
Behind a flag --use-remote-package-manager.

This looks pretty ugly right now, because of the different mechanisms by which data is shuffled around between the local & remote package managers and the application manager.

Some TODOs for future CLs:
- make it so pretty names are obtained from the package manager directly rather than via application manager. this avoids some races through the AM/PM relationship

R=sky@chromium.org
BUG=

Review URL: https://codereview.chromium.org/1698173003

Cr-Commit-Position: refs/heads/master@{#375672}

--- a/mojo/services/package_manager/BUILD.gn
+++ b/mojo/services/package_manager/BUILD.gn
@@ -14,6 +14,7 @@ mojo_native_application("package_manager") {
     ":lib",
     ":manifest",
     "//base",
+    "//mojo/message_pump",
     "//mojo/public/c/system:for_shared_library",
     "//mojo/public/cpp/bindings:bindings",
     "//mojo/shell/public/cpp",
@@ -27,6 +28,8 @@ mojo_application_manifest("manifest") {
 
 source_set("lib") {
   sources = [
+    "loader.cc",
+    "loader.h",
     "package_manager.cc",
     "package_manager.h",
   ]
