MacViews: Add native drop shadow to dialogs on OSX 10.9.
On OSX 10.10 and later, the Window manager is able to gather shadow
information from the alpha channel of the composited layer, but this isn't
supported on OSX 10.9. This CL adds native shadows to OSX 10.9 by using a
strategy similar to ChromeMac's -[ConstrainedWindowCustomWindow drawRect:].
This involves giving the window an opaque background and drawing over the
edges with `clear` color to make the corners round.

To do this, implement path_mac.mm which converts Skia Paths to NSBezierPath.
This is similar to the methods in path_win.cc and path_x11.cc.

On Mac, hit testing masks are inferred from the alpha channel. Using the
window manager to draw the shadow ensures we get the shadow corresponding to
the alpha channel, and removes the need to use views::BubbleWindowTargeter.

Since, native shadows are now supported, this CL also removes raster shadows
on all Mac Versions by setting all BubbleBorders on Mac to NO_ASSETS.

BUG=543671, 507965

Review URL: https://codereview.chromium.org/1633403002

Cr-Commit-Position: refs/heads/master@{#375729}

--- a/ui/gfx/BUILD.gn
+++ b/ui/gfx/BUILD.gn
@@ -145,6 +145,8 @@ component("gfx") {
     "nine_image_painter.h",
     "path.cc",
     "path.h",
+    "path_mac.h",
+    "path_mac.mm",
     "path_win.cc",
     "path_win.h",
     "path_x11.cc",
@@ -692,6 +694,7 @@ test("gfx_unittests") {
       "image/image_util_unittest.cc",
       "mac/coordinate_conversion_unittest.mm",
       "nine_image_painter_unittest.cc",
+      "path_mac_unittest.mm",
       "platform_font_mac_unittest.mm",
       "range/range_mac_unittest.mm",
       "range/range_unittest.cc",
