Fix ash_shell_with_content and mash_shell resource init.
Load ash's string and resource pak files; not Chrome's.
TODO: Support other languages; drop 'test' from pak names.

Remove unused ash/shell/content/shell_main_parts.*
Remove unused chrome_browser_main_extra_parts_aura.cc include.
Fix gn deps to support non-use_ash Win/Linux builds.

BUG=584038
TEST=ash_shell_with_content and mash_shell --use-ash-sysui work on Win/Linux regardless of use_ash.
R=sky@chromium.org

Review URL: https://codereview.chromium.org/1694263004

Cr-Commit-Position: refs/heads/master@{#375763}

--- a/ash/BUILD.gn
+++ b/ash/BUILD.gn
@@ -463,6 +463,12 @@ executable("ash_shell_with_content") {
     "//content/public/app:both",
   ]
 
+  data_deps = [
+    "//ash/strings:ash_test_strings",
+    "//ash/resources:ash_test_resources_100_percent",
+    "//ash/resources:ash_test_resources_200_percent",
+  ]
+
   if (is_win) {
     configs -= [ "//build/config/win:console" ]
     configs += [ "//build/config/win:windowed" ]
