--- a/remoting/host/BUILD.gn
+++ b/remoting/host/BUILD.gn
@@ -284,6 +284,7 @@ if (is_mac) {  # TODO(GYP) Mac build of remoting host.
       "resources_unittest.cc",
       "screen_resolution_unittest.cc",
       "security_key/gnubby_auth_handler_linux_unittest.cc",
+      "security_key/gnubby_extension_session_unittest.cc",
       "server_log_entry_host_unittest.cc",
       "setup/me2me_native_messaging_host_unittest.cc",
       "setup/oauth_helper_unittest.cc",
