To convert DomCode+EventFlags to DomKey we cannot use windows' build-in API ToUnicode/ToUnicodeEx directly because it will consume the dead keys in keyboard buffer.
This CL enumerates all key combinations and build a key map in advance using ToUnicodeEx, so future lookup won't go through keyboard buffer.

Note that the lookup table only contains printable characters, so non-printable characters will still use the default fallback in KeyEvent::ApplyLayout().

BUG=564678

Review URL: https://codereview.chromium.org/1585193002

Cr-Commit-Position: refs/heads/master@{#375812}

--- a/ui/events/BUILD.gn
+++ b/ui/events/BUILD.gn
@@ -50,6 +50,8 @@ component("events_base") {
     "keycodes/keyboard_code_conversion_win.cc",
     "keycodes/keyboard_code_conversion_win.h",
     "keycodes/keyboard_codes.h",
+    "keycodes/platform_key_map_win.cc",
+    "keycodes/platform_key_map_win.h",
     "latency_info.cc",
     "latency_info.h",
   ]
@@ -354,6 +356,7 @@ test("events_unittests") {
     "ipc/latency_info_param_traits_unittest.cc",
     "keycodes/dom/keycode_converter_unittest.cc",
     "keycodes/keyboard_code_conversion_unittest.cc",
+    "keycodes/platform_key_map_win_unittest.cc",
     "latency_info_unittest.cc",
     "platform/platform_event_source_unittest.cc",
     "scoped_target_handler_unittest.cc",
