--- a/mash/quick_launch/BUILD.gn
+++ b/mash/quick_launch/BUILD.gn
@@ -8,22 +8,34 @@ import("//mojo/public/mojo_application_manifest.gni")
 import("//mojo/public/tools/bindings/mojom.gni")
 import("//tools/grit/repack.gni")
 
-mojo_native_application("quick_launch") {
+source_set("lib") {
   sources = [
-    "quick_launch.cc",
+    "quick_launch_application.cc",
+    "quick_launch_application.h",
   ]
 
   deps = [
-    ":manifest",
     "//base",
     "//mojo/public/cpp/bindings",
     "//mojo/services/tracing/public/cpp",
     "//mojo/shell/public/cpp",
-    "//mojo/shell/public/cpp:sources",
     "//mojo/shell/public/interfaces",
     "//ui/views",
     "//ui/views/mus:for_mojo_application",
     "//url",
+  ]
+}
+
+mojo_native_application("quick_launch") {
+  sources = [
+    "main.cc",
+  ]
+
+  deps = [
+    ":lib",
+    ":manifest",
+    "//mojo/shell/public/cpp",
+    "//ui/views/mus:for_mojo_application",
   ]
 
   resources = [ "$root_out_dir/views_mus_resources.pak" ]
