Componentize IDS_PLUGIN_NOT_SUPPORTED & IDS_RECENTLY_CLOSED.
In order to share those two strings with iOS, move them to
//components/strings target (i.e. components_strings.grd).

BUG=568486

Review URL: https://codereview.chromium.org/1697393002

Cr-Commit-Position: refs/heads/master@{#375931}

--- a/chrome/renderer/BUILD.gn
+++ b/chrome/renderer/BUILD.gn
@@ -91,6 +91,7 @@ static_library("renderer") {
         rebase_path(gypi_values.chrome_renderer_plugin_sources, ".", "..")
     deps += [
       "//components/pdf/renderer",
+      "//components/strings",
       "//ppapi/host",
       "//ppapi/proxy",
       "//ppapi/proxy:ipc",
