--- a/ui/ozone/platform/drm/BUILD.gn
+++ b/ui/ozone/platform/drm/BUILD.gn
@@ -78,6 +78,8 @@ source_set("gbm") {
     "gpu/hardware_display_plane_manager.h",
     "gpu/hardware_display_plane_manager_legacy.cc",
     "gpu/hardware_display_plane_manager_legacy.h",
+    "gpu/inter_thread_messaging_proxy.cc",
+    "gpu/inter_thread_messaging_proxy.h",
     "gpu/overlay_plane.cc",
     "gpu/overlay_plane.h",
     "gpu/page_flip_request.cc",
