--- a/BUILD.gn
+++ b/BUILD.gn
@@ -596,6 +596,7 @@ group("mojo_apptests") {
   if (is_win || is_linux) {
     deps += [
       "//components/filesystem:apptests",
+      "//components/leveldb:apptests",
       "//components/mus/ws:tests",
       "//components/resource_provider:apptests",
       "//components/resource_provider:resource_provider_unittests",
