--- a/mash/BUILD.gn
+++ b/mash/BUILD.gn
@@ -10,6 +10,7 @@ group("all") {
 
   deps = [
     ":tests",
+    "//components/leveldb",
     "//mash/example",
     "//mash/screenlock",
     "//mash/shell",
