ozone/platform/wayland: Remove use of constexpr in wayland_object.h
constexpr is not yet allowed according to https://chromium-cpp.appspot.com/.

BUG=

Review URL: https://codereview.chromium.org/1701973006

Cr-Commit-Position: refs/heads/master@{#375962}

--- a/ui/ozone/platform/wayland/BUILD.gn
+++ b/ui/ozone/platform/wayland/BUILD.gn
@@ -10,6 +10,7 @@ source_set("wayland") {
     "ozone_platform_wayland.h",
     "wayland_display.cc",
     "wayland_display.h",
+    "wayland_object.cc",
     "wayland_object.h",
     "wayland_surface_factory.cc",
     "wayland_surface_factory.h",
