--- a/components/translate/core/browser/BUILD.gn
+++ b/components/translate/core/browser/BUILD.gn
@@ -76,6 +76,8 @@ source_set("unit_tests") {
   testonly = true
   sources = [
     "language_state_unittest.cc",
+    "mock_translate_driver.cc",
+    "mock_translate_driver.h",
     "translate_browser_metrics_unittest.cc",
     "translate_language_list_unittest.cc",
     "translate_prefs_unittest.cc",
@@ -90,4 +92,8 @@ source_set("unit_tests") {
     "//net:test_support",
     "//testing/gtest",
   ]
+  if (!use_aura) {
+    sources += [ "translate_ui_delegate_unittest.cc" ]
+    deps += [ "//components/infobars/core" ]
+  }
 }
