Mojo C++ bindings: support sync methods - part 1.
This CL:
- adds support for [Sync] attribute;
- generates C++ sync method signatures;
- does the simplest thing to block and wait for results of sync calls. (Allows
  any messages of the same interface ptr to re-enter; disallows any messages of
  other message pipes to re-enter.)

The following will be in future CLs:
- Change the re-entrancy behavior.
- Support sync calls with associated interfaces.

BUG=577699

Review URL: https://codereview.chromium.org/1701423002

Cr-Commit-Position: refs/heads/master@{#376023}

--- a/mojo/public/cpp/bindings/tests/BUILD.gn
+++ b/mojo/public/cpp/bindings/tests/BUILD.gn
@@ -42,6 +42,7 @@ source_set("tests") {
     "string_unittest.cc",
     "struct_traits_unittest.cc",
     "struct_unittest.cc",
+    "sync_method_unittest.cc",
     "type_conversion_unittest.cc",
     "union_unittest.cc",
     "validation_unittest.cc",
