--- a/ui/gfx/BUILD.gn
+++ b/ui/gfx/BUILD.gn
@@ -42,6 +42,8 @@ component("gfx") {
     "animation/animation_container_element.h",
     "animation/animation_container_observer.h",
     "animation/animation_delegate.h",
+    "animation/animation_mac.mm",
+    "animation/animation_win.cc",
     "animation/linear_animation.cc",
     "animation/linear_animation.h",
     "animation/multi_animation.cc",
