Add support for encoding/decoding WebP images.
This CL adds support for always encoding all images within SkPicture to
WebP. On the decoding side it also assumes that the input will be WebP.

The pixels from Skia are premultiplied, but the import functions available
from WebP only supports un-premultiplied data, so the code unpremultiples
the values during the encoding step. Also, the quality and method
configuration is hard coded since any change in it would change the
hash of the data.

Also, the alpha-channel is always used, since the WebP encoder will
optimize the alpha-channel if all values are 255.

BUG=577262

Review URL: https://codereview.chromium.org/1680333004

Cr-Commit-Position: refs/heads/master@{#376034}

--- a/blimp/client/BUILD.gn
+++ b/blimp/client/BUILD.gn
@@ -38,6 +38,7 @@ source_set("blimp_client") {
     "//cc",
     "//gpu/skia_bindings",
     "//net",
+    "//third_party/libwebp",
     "//ui/gfx/geometry",
     "//url:url",
   ]
@@ -76,6 +77,8 @@ source_set("feature") {
     "feature/compositor/blimp_layer_tree_settings.h",
     "feature/compositor/blimp_output_surface.cc",
     "feature/compositor/blimp_output_surface.h",
+    "feature/compositor/decoding_image_generator.cc",
+    "feature/compositor/decoding_image_generator.h",
     "feature/navigation_feature.cc",
     "feature/navigation_feature.h",
     "feature/render_widget_feature.cc",
