--- a/components/safe_browsing_db/BUILD.gn
+++ b/components/safe_browsing_db/BUILD.gn
@@ -49,9 +49,12 @@ source_set("database_manager") {
   ]
   deps = [
     ":hit_report",
+    ":proto",
     ":util",
+    ":v4_get_hash_protocol_manager",
     "//base:base",
     "//content/public/common",
+    "//net",
     "//url:url",
   ]
 }
@@ -100,7 +103,9 @@ source_set("remote_database_manager") {
   ]
   deps = [
     ":database_manager",
+    ":proto",
     ":safe_browsing_api_handler",
+    ":v4_get_hash_protocol_manager",
     "//base:base",
     "//components/variations",
     "//content/public/browser",
