media: Support TestMojoMediaClient.
- Rename DefaultMojoMediaClient to TestMojoMediaClient.
- Add a new stub DefaultMojoMediaClient, which will be used by Chromium for
  non-Android platforms.
- Add gn variable enable_test_mojo_media_client to enable TestMojoMediaClient
  for Chromium builds. This can be used for local tests.
- Separate MojoMediaApplication from it's creation so that it's easier to create
  MojoMediaApplication with a customized MojoMediaClient.
- Add CreateMojoMediaApplication() to create the app with default MojoMediaClient.
- App tests will always use TestMojoMediaClient.
- Update BUILD.gn to support all above.

BUG=570357
TEST=Tests still work. Tried enable_test_mojo_media_client locally.

Review URL: https://codereview.chromium.org/1702803002

Cr-Commit-Position: refs/heads/master@{#376193}

--- a/chrome/browser/BUILD.gn
+++ b/chrome/browser/BUILD.gn
@@ -965,7 +965,7 @@ source_set("browser") {
   }
 
   if (enable_mojo_media == "browser") {
-    deps += [ "//media/mojo/services:application" ]
+    deps += [ "//media/mojo/services:application_factory" ]
   } else if (enable_mojo_media != "none") {
     configs += [ "//media/mojo/services:enable_mojo_media_config" ]
   }
