Move various Shell tests into a subdir.
TBR=sky@chromium.org
BUG=

Review URL: https://codereview.chromium.org/1706833003

Cr-Commit-Position: refs/heads/master@{#376255}

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -603,7 +603,7 @@ group("mojo_apptests") {
       "//mash/wm:tests",
       "//media/mojo/services:tests",
       "//mojo/services/network:apptests",
-      "//mojo/shell:apptests",
+      "//mojo/shell/tests:apptests",
       "//ui/views/mus:tests",
     ]
   }
