--- a/mojo/BUILD.gn
+++ b/mojo/BUILD.gn
@@ -43,10 +43,10 @@ group("tests") {
     "//mojo/edk/test:mojo_public_system_unittests",
     "//mojo/edk/test:mojo_public_utility_unittests",
     "//mojo/services/network:apptests",
-    "//mojo/shell:apptests",
-    "//mojo/shell:mojo_shell_unittests",
     "//mojo/shell/public/cpp/tests:mojo_public_application_unittests",
     "//mojo/shell/runner/host:mojo_runner_host_unittests",
+    "//mojo/shell/tests:apptests",
+    "//mojo/shell/tests:mojo_shell_unittests",
   ]
 
   if (is_android) {
