--- a/content/test/BUILD.gn
+++ b/content/test/BUILD.gn
@@ -837,6 +837,7 @@ test("content_gl_tests") {
   sources = [
     "../common/gpu/client/gl_helper_unittest.cc",
     "../common/gpu/client/gpu_in_process_context_tests.cc",
+    "run_all_gl_tests.cc",
   ]
 
   deps = [
@@ -872,6 +873,7 @@ test("content_gl_tests") {
 test("content_gl_benchmark") {
   sources = [
     "../common/gpu/client/gl_helper_benchmark.cc",
+    "run_gl_benchmark.cc",
   ]
 
   deps = [
