--- a/ipc/BUILD.gn
+++ b/ipc/BUILD.gn
@@ -91,6 +91,8 @@ component("ipc") {
     "message_filter.h",
     "message_filter_router.cc",
     "message_filter_router.h",
+    "message_router.cc",
+    "message_router.h",
     "param_traits_log_macros.h",
     "param_traits_macros.h",
     "param_traits_read_macros.h",
