Move VideoCapture* files from media/base/android/... to media/capture/video/android/java/...
** No code changes (except git cl format kicked by presbumit). **

This CL refactors the VideoCapture*java classes
from being under media/base/android/java/... into
media/capture/video/android/java/... with the idea
of bringing all such classes under a single roof
as a preparation for http://crbug.com/584797 (CL
http://crrev.com/1699553002) which creates an entity
(very similar to media/cast/ and media/midi/) with
its own .gn and .gyp.

BUG=587693, 584797
NOTRY=true

Review URL: https://codereview.chromium.org/1705333003

Cr-Commit-Position: refs/heads/master@{#376409}

--- a/chrome/android/BUILD.gn
+++ b/chrome/android/BUILD.gn
@@ -136,7 +136,7 @@ android_library("chrome_java") {
     "//components/web_contents_delegate_android:web_contents_delegate_android_java",
     "//components/web_restrictions:web_restrictions_java",
     "//content/public/android:content_java",
-    "//media/base/android:media_java",
+    "//media/capture/video/android:media_java",
     "//media/midi:midi_java",
     "//net/android:net_java",
     "//printing:printing_java",
