--- a/content/public/android/BUILD.gn
+++ b/content/public/android/BUILD.gn
@@ -38,7 +38,7 @@ android_library("content_java") {
     "//device/usb:java",
     "//device/vibration:mojo_bindings_java",
     "//device/vibration/android:vibration_manager_android",
-    "//media/base/android:media_java",
+    "//media/capture/video/android:media_java",
     "//media/midi:midi_java",
     "//mojo/android:system_java",
     "//mojo/public/java:bindings",
@@ -176,7 +176,7 @@ android_library("content_javatests") {
     "//content/shell/android:content_shell_test_java",
     "//device/vibration:mojo_bindings_java",
     "//device/vibration/android:vibration_manager_android",
-    "//media/base/android:media_java",
+    "//media/capture/video/android:media_java",
     "//mojo/android:system_java",
     "//mojo/public/interfaces/bindings/tests:test_interfaces_java",
     "//mojo/public/java:bindings",
