[Win] fix EventSystemLocationFromNative
EventSystemLocationFromNative (events_win.cc) converts coordinates of
MouseWheelEvent to screen coordinates, even though they are already in
screen coordinates. This convertion should be skipped.

BUG=None
R=sadrul@chromium.org

Review URL: https://codereview.chromium.org/1696143002

Cr-Commit-Position: refs/heads/master@{#376426}

--- a/ui/events/BUILD.gn
+++ b/ui/events/BUILD.gn
@@ -360,6 +360,7 @@ test("events_unittests") {
     "latency_info_unittest.cc",
     "platform/platform_event_source_unittest.cc",
     "scoped_target_handler_unittest.cc",
+    "win/event_utils_win_unittest.cc",
   ]
 
   deps = [
