Allow developers with tryjob-access to CQ Dry Run.
NOPRESUBMIT=true
NOTRY=true

BUG=587676
R=machenbach@chromium.org

Review URL: https://codereview.chromium.org/1713723004

Cr-Commit-Position: refs/heads/master@{#376436}

--- a/infra/config/cq.cfg
+++ b/infra/config/cq.cfg
@@ -16,6 +16,7 @@ rietveld {
 verifiers {
   reviewer_lgtm {
     committer_list: "external/project-chromium-committers"
+    dry_run_access_list: "project-chromium-tryjob-access"
   }
 
   tree_status {
