Revert of Move VideoCapture* files from media/base/android/... to media/capture/video/android/java/... (patchset #2 id:70001 of https://codereview.chromium.org/1705333003/ )
Reason for revert:
Android WebView tests started failing after 4 CLs landed including this one, and it seems like the most likely culprit. See https://build.chromium.org/p/chromium.android/builders/Android%20Webview%20L%20%28dbg%29/builds/9568 and https://build.chromium.org/p/chromium.android/builders/Android%20Webview%20M%20%28dbg%29/builds/5214.

Original issue's description:
> Move VideoCapture* files from media/base/android/... to media/capture/video/android/java/...
>
> ** No code changes (except git cl format kicked by presbumit). **
>
> This CL refactors the VideoCapture*java classes
> from being under media/base/android/java/... into
> media/capture/video/android/java/... with the idea
> of bringing all such classes under a single roof
> as a preparation for http://crbug.com/584797 (CL
> http://crrev.com/1699553002) which creates an entity
> (very similar to media/cast/ and media/midi/) with
> its own .gn and .gyp.
>
> BUG=587693, 584797
> NOTRY=true
>
> Committed: https://crrev.com/157c17e6d77e64efee6b82947506f544aac3b79f
> Cr-Commit-Position: refs/heads/master@{#376409}

TBR=qinmin@chromium.org,dalecurtis@chromium.org,avi@chromium.org,dtrainor@chromium.org,mcasas@chromium.org
# Skipping CQ checks because original CL landed less than 1 days ago.
NOPRESUBMIT=true
NOTREECHECKS=true
NOTRY=true
BUG=587693, 584797

Review URL: https://codereview.chromium.org/1710373002

Cr-Commit-Position: refs/heads/master@{#376438}

--- a/content/shell/android/BUILD.gn
+++ b/content/shell/android/BUILD.gn
@@ -45,7 +45,7 @@ android_library("content_shell_java") {
     ":content_shell_java_resources",
     "//base:base_java",
     "//content/public/android:content_java",
-    "//media/capture/video/android:media_java",
+    "//media/base/android:media_java",
     "//mojo/public/java:system",
     "//net/android:net_java",
     "//ui/android:ui_java",
@@ -79,7 +79,7 @@ android_library("content_shell_apk_java") {
     ":content_shell_java",
     "//base:base_java",
     "//content/public/android:content_java",
-    "//media/capture/video/android:media_java",
+    "//media/base/android:media_java",
     "//net/android:net_java",
     "//ui/android:ui_java",
   ]
@@ -109,7 +109,7 @@ android_apk("content_shell_apk") {
     ":libcontent_shell_content_view",
     "//base:base_java",
     "//content/public/android:content_java",
-    "//media/capture/video/android:media_java",
+    "//media/base/android:media_java",
     "//net/android:net_java",
     "//third_party/mesa:osmesa",
     "//ui/android:ui_java",
