Restructure/simplify ApplicationManager
1. fold a bunch of functions together
2. make application loader load after a reply from the package manager

R=sky@chromium.org
BUG=

Review URL: https://codereview.chromium.org/1709903002

Cr-Commit-Position: refs/heads/master@{#376444}

--- a/mojo/shell/BUILD.gn
+++ b/mojo/shell/BUILD.gn
@@ -9,7 +9,11 @@ group("all") {
   testonly = true
   deps = [
     ":shell",
+    "//mojo/shell/background",
+    "//mojo/shell/background",
     "//mojo/shell/runner",
+    "//mojo/shell/standalone",
+    "//mojo/shell/tests",
   ]
 }
 
