--- a/mojo/shell/background/BUILD.gn
+++ b/mojo/shell/background/BUILD.gn
@@ -2,6 +2,14 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+group("background") {
+  testonly = true
+  deps = [
+    ":lib",
+    ":main",
+  ]
+}
+
 source_set("lib") {
   sources = [
     "background_shell.cc",
