Remove Profile dependency from some ProfileSyncService unittests
More precisely, this removes the //chrome dependencies from TestProfileSyncService, AbstractProfileSyncServiceTest, ProfileSyncServiceTypedUrlTest and ProfileSyncServiceAutofillTest.

BUG=581640

Review URL: https://codereview.chromium.org/1646553002

Cr-Commit-Position: refs/heads/master@{#376446}

--- a/components/browser_sync/browser/BUILD.gn
+++ b/components/browser_sync/browser/BUILD.gn
@@ -95,6 +95,9 @@ source_set("test_support") {
     ":browser",
     "//base",
     "//base/test:test_support",
+    "//components/history/core/browser:browser",
+    "//components/invalidation/impl",
+    "//components/invalidation/impl:test_support",
     "//components/pref_registry",
     "//components/signin/core/browser:browser",
     "//components/signin/core/browser:test_support",
