Add assigner support to Blimp
- Add code to contact the assigner for an engine instance.
- Add plumbing to pipe the request from Java to native.
- Add plumbing to pipe the response back to Java to provide a UI
  indication of the success or failure of the request.
- Connect the assignment response with the BlimpClientSession.

BUG=582668

Review URL: https://codereview.chromium.org/1687393002

Cr-Commit-Position: refs/heads/master@{#376447}

--- a/blimp/client/BUILD.gn
+++ b/blimp/client/BUILD.gn
@@ -44,6 +44,23 @@ source_set("blimp_client") {
   ]
 }
 
+source_set("blimp_client_unit_tests") {
+  testonly = true
+
+  sources = [
+    "session/assignment_source_unittest.cc",
+  ]
+
+  deps = [
+    ":blimp_client",
+    "//base",
+    "//base/test:run_all_unittests",
+    "//base/test:test_support",
+    "//testing/gmock",
+    "//testing/gtest",
+  ]
+}
+
 source_set("app_unit_tests") {
   testonly = true
 
@@ -258,7 +275,15 @@ if (is_android) {
     ]
   }
 
+  java_cpp_enum("blimp_java_enums_srcjar") {
+    sources = [
+      "session/assignment_source.h",
+    ]
+  }
+
   android_library("blimp_java") {
+    srcjar_deps = [ ":blimp_java_enums_srcjar" ]
+
     deps = [
       ":blimp_java_resources",
       "//base:base_java",
@@ -342,6 +367,7 @@ if (is_android) {
       ":blimp_java",
       ":blimp_java_resources",
       "//base:base_java",
+      "//net/android:net_java",
       google_play_services_resources,
     ]
     apk_name = "Blimp"
