--- a/chrome/android/BUILD.gn
+++ b/chrome/android/BUILD.gn
@@ -234,6 +234,7 @@ java_cpp_enum("chrome_android_java_enums_srcjar") {
     "//chrome/browser/android/shortcut_info.h",
     "//chrome/browser/android/tab_android.h",
     "//chrome/browser/browsing_data/browsing_data_counter_utils.h",
+    "//chrome/browser/browsing_data/browsing_data_remover.h",
     "//chrome/browser/profiles/profile_metrics.h",
     "//chrome/browser/ui/android/infobars/infobar_android.h",
   ]
