--- a/content/public/renderer/BUILD.gn
+++ b/content/public/renderer/BUILD.gn
@@ -49,7 +49,10 @@ source_set("renderer_sources") {
         rebase_path(content_renderer_gypi_values.public_renderer_webrtc_sources,
                     ".",
                     "//content")
-    deps += [ "//third_party/webrtc" ]
+    deps += [
+      "//content/public/common:feature_h264_with_openh264_ffmpeg",
+      "//third_party/webrtc",
+    ]
   }
 
   if (enable_plugins) {
