--- a/gpu/BUILD.gn
+++ b/gpu/BUILD.gn
@@ -166,6 +166,7 @@ test("gl_tests") {
     "command_buffer/tests/gl_program_unittest.cc",
     "command_buffer/tests/gl_query_unittest.cc",
     "command_buffer/tests/gl_readback_unittest.cc",
+    "command_buffer/tests/gl_request_extension_unittest.cc",
     "command_buffer/tests/gl_shared_resources_unittest.cc",
     "command_buffer/tests/gl_stream_draw_unittest.cc",
     "command_buffer/tests/gl_test_utils.cc",
