Revert of Enable H.264 video WebRTC behind run-time flag and add WebRtcBrowserTest for H.264 (patchset #8 id:280001 of https://codereview.chromium.org/1673183002/ )
Reason for revert:
Caused compile error on WebRTC Win Builder Chromium bot:

https://build.chromium.org/p/chromium.webrtc/builders/Win%20Builder/builds/34506

FAILED: ninja -t msvc -e environment.x86 -- E:\b\build\goma/gomacc "E:\b\depot_tools\win_toolchain\vs2013_files\4087e065abebdca6dbd0caca2910c6718d2ec67f\VC\bin\amd64_x86\cl.exe" /nologo /showIncludes /FC @obj\content\public\common\feature_h264_with_openh264_ffmpeg.feature_h264_with_openh264_ffmpeg.obj.rsp /c ..\..\content\public\common\feature_h264_with_openh264_ffmpeg.cc /Foobj\content\public\common\feature_h264_with_openh264_ffmpeg.feature_h264_with_openh264_ffmpeg.obj /Fdobj\content\feature_h264_with_openh264_ffmpeg.cc.pdb
e:\b\build\slave\win_builder\build\src\content\public\common\feature_h264_with_openh264_ffmpeg.h(9) : fatal error C1083: Cannot open include file: 'content/public/common/common_features.h': No such file or directory
ninja: build stopped: subcommand failed.

Original issue's description:
> Enable H.264 video WebRTC behind run-time flag and add
> WebRtcBrowserTest for H.264.
>
> The compile flag |rtc_use_h264| defaults to
> |proprietary_codecs| which is used on some Chromium bots
> and in the official Chrome build. The new run-time flag
> |kWebRtcH264WithOpenH264FFmpeg| determines if the
> |rtc_use_h264| encoder/decoder will be used at runtime.
>
> The run-time flag is off by default.
>
> This CL:
> - Adds run-time flag and a new build target for it. It is
> placed in content/public/common/ because it
> can't/shouldn't be placed in the webrtc repo and
> peer_connection_dependency_factory.cc lives in
> content/renderer/media/webrtc/.
> - Moves renderer_features and its generated header file
> target from content/renderer/ to content/public/common/
> to not break include rules and renames it to
> common_features.
> - Based on the 

--- a/content/public/renderer/BUILD.gn
+++ b/content/public/renderer/BUILD.gn
@@ -49,10 +49,7 @@ source_set("renderer_sources") {
         rebase_path(content_renderer_gypi_values.public_renderer_webrtc_sources,
                     ".",
                     "//content")
-    deps += [
-      "//content/public/common:feature_h264_with_openh264_ffmpeg",
-      "//third_party/webrtc",
-    ]
+    deps += [ "//third_party/webrtc" ]
   }
 
   if (enable_plugins) {
