--- a/mojo/shell/runner/host/BUILD.gn
+++ b/mojo/shell/runner/host/BUILD.gn
@@ -37,6 +37,24 @@ source_set("native_application_support") {
   check_includes = false
 }
 
+source_set("child_process_base") {
+  sources = [
+    "child_process_base.cc",
+    "child_process_base.h",
+  ]
+
+  deps = [
+    "//base",
+    "//mojo/edk/system",
+    "//mojo/message_pump",
+    "//mojo/platform_handle:platform_handle_impl",
+    "//mojo/shell",
+    "//mojo/shell/runner:init",
+    "//mojo/shell/runner/child:interfaces",
+    "//mojo/shell/runner/common",
+  ]
+}
+
 source_set("lib") {
   sources = [
     "child_process.cc",
@@ -50,6 +68,7 @@ source_set("lib") {
   ]
 
   deps = [
+    ":child_process_base",
     ":native_application_support",
     "//base",
     "//base:base_static",
